--- a/(Mana(ManaGh)).html
+++ b/(Mana(ManaGh)).html
@@ -17,5 +17,6 @@
 
     <!-- Loads YOUR javascript code -->
     <script src="script.js"></script>
+    <script src="/shows.js"></script>
   </body>
 </html>
